# kurve_db

./: .gitignore  database.py  hacs.json  pyproject.toml  scrape.py
custom_components/kurve/: api.py  manifest.json  merge.py
custom_components/kurve/db/: interactions.py
kurve_scraper/: api.py  consts.py
kurve_scraper/db/: definitions.py
