[project]
name = "kurve_scraper"
version = "0.1.0"
# description = ""  # TODO
readme = "README.md"
authors = [
	{ name = "celynw", email = "3299161+celynw@users.noreply.github.com" },
]
# license = { file = "LICENCE" }  # TODO
requires-python = ">=3.12"
dependencies = [
	"requests~=2.32",
	"SQLAlchemy~=2.0",
	"rich~=13.9",
	"typer~=0.12",
	"kellog~=1.0",
	"inflection>=0.5.1",
]
# keywords = []  # TODO
# classifiers = []  # TODO

[project.urls]
Repository = "https://github.com/celynw/kurve_scraper"
Issues = "https://github.com/celynw/kurve_scraper/issues"
Changelog = "https://github.com/celynw/kurve_scraper/blob/master/CHANGELOG.md" # TODO

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[tool.setuptools]
packages = ["kurve_scraper"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"W191",   # Indentation contains tabs
	"D206",   # Docstring should be indented with spaces, not tabs
	"D212",   # Multi-line docstring summary should start at the first line
	"D203",   # 1 blank line required before class docstring
	"D413",   # Missing blank line after last section
	"DTZ001", # `datetime.datetime()` called without a `tzinfo` argument
]
unfixable = [
	"F401", # Imported but unused
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.uv.sources]
kurve-scraper = { workspace = true }

[dependency-groups]
dev = [
    "kurve-scraper",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pylint]
allow-magic-value-types = ["str", "bytes", "int"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
	"S101",   # Use of assert detected
	"SLF001", # Private member accessed
	"INP001", # Use of assert detected
	"D100",   # Missing docstring in public module
]
"__init__.py" = [
	"F401", # Imported but unused
]
